--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,26 @@
 version: '3.8'
 
 services:
+
+  db:
+    image: postgres:13
+    container_name: postgres-db
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_DB=db
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U admin -d db"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - postgres_data:/var/lib/postgressql/postgres_data
+
   app:
     build:
       context: .
@@ -8,5 +28,11 @@ services:
     container_name: task-manager-api
     ports:
       - "8080:8080"
+    depends_on:
+      db:
+        condition: service_healthy
     volumes:
       - ./app:/app
+
+volumes:
+  postgres_data:
