--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
-      - POSTGRES_HOST=postgres
+      - POSTGRES_HOST=postgres-db
       - POSTGRES_PORT=5432
       - POSTGRES_DB=db
     ports:
@@ -33,6 +33,8 @@ services:
         condition: service_healthy
     volumes:
       - ./app:/app
+    env_file:
+      - .env
 
 volumes:
   postgres_data:
