--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.12.1
 annotated-types==0.5.0
 anyio==3.7.1
+bcrypt==4.2.1
 black==23.3.0
 certifi==2025.1.31
 click==8.1.8
@@ -26,10 +27,12 @@ packaging==24.0
 pathspec==0.11.2
 platformdirs==4.0.0
 psycopg2==2.9.9
+psycopg2-binary==2.9.10
 pydantic==2.5.3
 pydantic-extra-types==2.3.0
 pydantic-settings==2.0.3
 pydantic_core==2.14.6
+PyJWT==2.10.1
 python-dotenv==0.21.1
 python-multipart==0.0.8
 PyYAML==6.0.1
